; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_demux.c_DemuxNameFromExtension.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_demux.c_DemuxNameFromExtension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i8*, i8* }
%struct.anon = type { %struct.TYPE_5__*, i64 }

@DemuxNameFromExtension.strong = internal global [33 x %struct.TYPE_5__] [%struct.TYPE_5__ { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.11, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.14, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.17, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.18, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.17, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.17, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.17, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.19, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.20, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.21, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.21, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.22, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.24, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.25, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.26, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.27, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.28, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.28, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.29, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.30, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.31, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.32, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.33, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.33, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.34, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.35, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* null }], align 16
@.str = private unnamed_addr constant [5 x i8] c"aiff\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"asf\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"au\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"avi\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"drc\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"dirac\00", align 1
@.str.6 = private unnamed_addr constant [3 x i8] c"dv\00", align 1
@.str.7 = private unnamed_addr constant [5 x i8] c"flac\00", align 1
@.str.8 = private unnamed_addr constant [5 x i8] c"h264\00", align 1
@.str.9 = private unnamed_addr constant [4 x i8] c"kar\00", align 1
@.str.10 = private unnamed_addr constant [4 x i8] c"smf\00", align 1
@.str.11 = private unnamed_addr constant [4 x i8] c"m3u\00", align 1
@.str.12 = private unnamed_addr constant [4 x i8] c"m4a\00", align 1
@.str.13 = private unnamed_addr constant [4 x i8] c"mp4\00", align 1
@.str.14 = private unnamed_addr constant [4 x i8] c"m4v\00", align 1
@.str.15 = private unnamed_addr constant [4 x i8] c"mid\00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"mka\00", align 1
@.str.17 = private unnamed_addr constant [4 x i8] c"mkv\00", align 1
@.str.18 = private unnamed_addr constant [4 x i8] c"mks\00", align 1
@.str.19 = private unnamed_addr constant [5 x i8] c"moov\00", align 1
@.str.20 = private unnamed_addr constant [4 x i8] c"mov\00", align 1
@.str.21 = private unnamed_addr constant [4 x i8] c"nsv\00", align 1
@.str.22 = private unnamed_addr constant [4 x i8] c"oga\00", align 1
@.str.23 = private unnamed_addr constant [4 x i8] c"ogg\00", align 1
@.str.24 = private unnamed_addr constant [4 x i8] c"ogm\00", align 1
@.str.25 = private unnamed_addr constant [4 x i8] c"ogv\00", align 1
@.str.26 = private unnamed_addr constant [4 x i8] c"ogx\00", align 1
@.str.27 = private unnamed_addr constant [5 x i8] c"opus\00", align 1
@.str.28 = private unnamed_addr constant [4 x i8] c"pva\00", align 1
@.str.29 = private unnamed_addr constant [3 x i8] c"rm\00", align 1
@.str.30 = private unnamed_addr constant [9 x i8] c"avformat\00", align 1
@.str.31 = private unnamed_addr constant [4 x i8] c"rmi\00", align 1
@.str.32 = private unnamed_addr constant [4 x i8] c"spx\00", align 1
@.str.33 = private unnamed_addr constant [4 x i8] c"voc\00", align 1
@.str.34 = private unnamed_addr constant [4 x i8] c"wma\00", align 1
@.str.35 = private unnamed_addr constant [4 x i8] c"wmv\00", align 1
@DemuxNameFromExtension.quick = internal global [3 x %struct.TYPE_5__] [%struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.36, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.37, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* null }, %struct.TYPE_5__ { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.34, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* null }], align 16
@.str.36 = private unnamed_addr constant [4 x i8] c"mp3\00", align 1
@.str.37 = private unnamed_addr constant [5 x i8] c"mpga\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @DemuxNameFromExtension to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @DemuxNameFromExtension(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.anon, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds %struct.anon, %struct.anon* %5, i32 0, i32 0
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  %10 = zext i1 %9 to i64
  %11 = select i1 %9, %struct.TYPE_5__* getelementptr inbounds ([3 x %struct.TYPE_5__], [3 x %struct.TYPE_5__]* @DemuxNameFromExtension.quick, i64 0, i64 0), %struct.TYPE_5__* getelementptr inbounds ([33 x %struct.TYPE_5__], [33 x %struct.TYPE_5__]* @DemuxNameFromExtension.strong, i64 0, i64 0)
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** %7, align 8
  %12 = getelementptr inbounds %struct.anon, %struct.anon* %5, i32 0, i32 1
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i64 @ARRAY_SIZE(%struct.TYPE_5__* getelementptr inbounds ([3 x %struct.TYPE_5__], [3 x %struct.TYPE_5__]* @DemuxNameFromExtension.quick, i64 0, i64 0))
  br label %19

17:                                               ; preds = %2
  %18 = call i64 @ARRAY_SIZE(%struct.TYPE_5__* getelementptr inbounds ([33 x %struct.TYPE_5__], [33 x %struct.TYPE_5__]* @DemuxNameFromExtension.strong, i64 0, i64 0))
  br label %19

19:                                               ; preds = %17, %15
  %20 = phi i64 [ %16, %15 ], [ %18, %17 ]
  store i64 %20, i64* %12, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = getelementptr inbounds %struct.anon, %struct.anon* %5, i32 0, i32 0
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %22, align 8
  %24 = getelementptr inbounds %struct.anon, %struct.anon* %5, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = call %struct.TYPE_5__* @demux_lookup(i8* %21, %struct.TYPE_5__* %23, i64 %25)
  store %struct.TYPE_5__* %26, %struct.TYPE_5__** %6, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %28 = icmp ne %struct.TYPE_5__* %27, null
  br i1 %28, label %29, label %33

29:                                               ; preds = %19
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 2
  %32 = load i8*, i8** %31, align 8
  br label %34

33:                                               ; preds = %19
  br label %34

34:                                               ; preds = %33, %29
  %35 = phi i8* [ %32, %29 ], [ null, %33 ]
  ret i8* %35
}

declare dso_local i64 @ARRAY_SIZE(%struct.TYPE_5__*) #1

declare dso_local %struct.TYPE_5__* @demux_lookup(i8*, %struct.TYPE_5__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
